Update TransactionDetail
